@startuml domain-classes
!theme plain
title Диаграмма классов — Current (Phase 1-3 MVP, 9 сущностей)

skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam packageStyle rectangle
hide circle
hide empty members

' ============================================================================
' Перечисления (enums) — все 5 enum'ов из server/db/schema/
' ============================================================================

enum WorkspaceRole {
  viewer
  member
  scrum_master
  admin
  owner
}

enum SprintState {
  planned
  active
  closed
}

enum ColumnRole {
  backlog
  in_progress
  review
  done
  archived
}

enum TaskPriority {
  low
  medium
  high
}

enum TaskEventType {
  task_created
  task_moved
  task_closed
  task_reopened
  task_assigned
  task_updated
  task_archived
}

' ============================================================================
' Identity & Tenancy — User, Workspace, WorkspaceMember
' ============================================================================

class User {
  + id : UUID
  + email : varchar(255) <<UNIQUE>>
  + passwordHash : varchar(255)
  + createdAt : timestamptz
  + updatedAt : timestamptz
}
note right of User
  Глобальная (не tenant-scoped).
  Хеш пароля — scrypt через
  nuxt-auth-utils hashPassword().
end note

class Workspace <<tenant root>> {
  + id : UUID
  + name : varchar(255)
  + slug : varchar(64) <<UNIQUE глобально>>
  + createdAt : timestamptz
  + updatedAt : timestamptz
}

class WorkspaceMember {
  + workspaceId : UUID <<FK CASCADE>>
  + userId : UUID <<FK CASCADE>>
  + role : WorkspaceRole
  + createdAt : timestamptz
}
note right of WorkspaceMember
  PRIMARY KEY (workspaceId, userId).
  Owner — единственный путь к workspace
  (нет колонки owner_id; вычисляется
  как member с role='owner').
end note

' ============================================================================
' Boards & Columns
' ============================================================================

class Board {
  + id : UUID
  + workspaceId : UUID <<FK CASCADE>>
  + name : varchar(255)
  + slug : varchar(64)
  + createdAt : timestamptz
  + updatedAt : timestamptz
}
note right of Board
  UNIQUE INDEX (workspaceId, slug)
  — slug уникален в пределах workspace,
  не глобально.
end note

class BoardColumn {
  + id : UUID
  + workspaceId : UUID <<FK CASCADE>>
  + boardId : UUID <<FK CASCADE>>
  + name : varchar(255)
  + position : integer
  + columnRole : ColumnRole
  + wipLimit : integer?
  + createdAt : timestamptz
}
note right of BoardColumn
  UNIQUE INDEX (boardId, position).
  wipLimit = null — без лимита.
  Имя свободное, аналитика идёт по columnRole.
end note

' ============================================================================
' Tasks & Event Log
' ============================================================================

class Task {
  + id : UUID
  + workspaceId : UUID <<FK CASCADE>>
  + boardId : UUID <<FK CASCADE>>
  + columnId : UUID <<FK RESTRICT>>
  + title : varchar(255)
  + description : text
  + assigneeId : UUID? <<FK SET NULL>>
  + priority : TaskPriority
  + position : integer
  + closedAt : timestamptz?
  + reopenedCount : integer
  + createdAt : timestamptz
  + updatedAt : timestamptz
}
note right of Task
  columnId ON DELETE RESTRICT —
  защита от тихой потери (колонку
  с задачами нельзя удалить).
  closedAt проставляется при входе
  в колонку с columnRole='done'.
  Связь со sprint — через sprint_tasks,
  не через колонку sprint_id.
end note

class TaskEvent <<append-only>> {
  + id : UUID
  + workspaceId : UUID <<FK CASCADE>>
  + taskId : UUID <<FK CASCADE>>
  + eventType : TaskEventType
  + fromColumnId : UUID?
  + toColumnId : UUID?
  + actorId : UUID? <<FK SET NULL>>
  + payload : jsonb
  + createdAt : timestamptz
}
note right of TaskEvent
  fromColumnId / toColumnId — типизированные
  uuid-колонки БЕЗ FK на BoardColumn:
  при удалении колонки события переживают
  как «висячие» снапшоты для аналитики.

  taskId ON DELETE CASCADE — известное
  ограничение (см. 07-domain-model.md
  Quirks → Target: SET NULL + snapshot).

  Источник истины для CFD / Monte Carlo /
  cycle time — индекс (workspaceId, createdAt).
end note

' ============================================================================
' Sprints
' ============================================================================

class Sprint {
  + id : UUID
  + workspaceId : UUID <<FK CASCADE>>
  + boardId : UUID <<FK CASCADE>>
  + name : varchar(255)
  + goal : text
  + state : SprintState
  + plannedStartAt : timestamptz?
  + plannedEndAt : timestamptz?
  + startedAt : timestamptz?
  + endedAt : timestamptz?
  + createdAt : timestamptz
  + updatedAt : timestamptz
}
note right of Sprint
  Partial UNIQUE INDEX (boardId)
  WHERE state='active' — на доске
  максимум один активный спринт.
  Длительность считается по
  startedAt / endedAt, не по
  planned_*.
end note

class SprintTask {
  + sprintId : UUID <<FK CASCADE>>
  + taskId : UUID <<FK CASCADE>>
  + workspaceId : UUID <<FK CASCADE>>
  + addedAt : timestamptz
}
note right of SprintTask
  PRIMARY KEY (sprintId, taskId)
  — M:N задач и спринтов с защитой
  от дублей. Carry-over между
  итерациями допускается.
end note

' ============================================================================
' Связи — multiplicity и FK on-delete behavior
' ============================================================================

' Identity & Tenancy
User "1" -- "0..*" WorkspaceMember : member of >
Workspace "1" -- "1..*" WorkspaceMember : has >

' Workspace owns boards
Workspace "1" *-- "0..*" Board : owns >

' Board composition
Board "1" *-- "1..*" BoardColumn : has columns >

' Tasks
Board "1" -- "0..*" Task : contains >
BoardColumn "1" -- "0..*" Task : current location\n(RESTRICT) >
User "0..1" -- "0..*" Task : assignee\n(SET NULL) >

' Task history
Task "1" *-- "0..*" TaskEvent : history\n(CASCADE) >
User "0..1" -- "0..*" TaskEvent : actor\n(SET NULL) >

' Sprints
Board "1" -- "0..*" Sprint : owns >
Sprint "1" -- "0..*" SprintTask : contains >
Task "1" -- "0..*" SprintTask : participates in >

' ============================================================================
' Note: Target entities (deferred)
' ============================================================================

note as N1
  **Target (отложено, см.** [[../../07-domain-model.md 07-domain-model.md]] **→ Target):**

  • projects, task_comments, task_attachments, task_tags
  • invitations, sessions (server-side store), feature_flags, audit_log
  • flow_daily, cycle_time_samples, sprint_stats
  • + 3 materialized views (mv_cfd_last_90d,
    mv_throughput_weekly, mv_cycle_time_percentiles)

  Каждая сущность с измеримым триггером ввода в 07.
  Сейчас 9 таблиц + 5 enum'ов покрывают MVP-объём
  Phase 1-3 без преждевременной сложности.
end note

@enduml
